Fix: Dark Mode only

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,26 @@
+* {
+	margin: 0 !important;
+	padding: 0;
+	box-sizing: border-box;
+}
+body {
+	overflow: hidden;
+}
 .main {
 	display: flex;
 	flex-direction: column;
-	/* justify-content: center; */
+	justify-content: center;
 	align-items: center;
-	/* align-content: center; */
+	height: 100vh;
+	width: 100vw;
+}
+.joke {
+	/* background: red; */
+	font-size: 36px;
+	margin-top: 30px !important;
+}
+button {
+	font-size: 18px;
+	padding: 10px 20px !important;
+	margin-top: 50px !important;
 }
